--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -32,6 +32,9 @@
                 <td><a th:href="${'/products/' + product.id + '/show'}">View</a></td>
             </tr>
         </table>
+        <div class="row">
+            <a href="#" th:href="@{/products/new}">Create New Product</a>
+        </div>
     </div>
 </div>
 </body>
