--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -23,6 +23,7 @@
                 <th>Price</th>
                 <th>Image URL</th>
                 <th>List</th>
+                <th>Edit</th>
             </tr>
             <tr th:each="product : ${products}">
                 <td th:text="${product.id}"></td>
@@ -30,6 +31,7 @@
                 <td th:text="${product.price}"></td>
                 <td th:text="${product.imageUrl}"></td>
                 <td><a th:href="${'/products/' + product.id + '/show'}">View</a></td>
+                <td><a th:href="${'/products/' + product.id + '/edit'}">Edit</a></td>
             </tr>
         </table>
         <div class="row">
