--- a/src/main/resources/templates/customer/customerform.html
+++ b/src/main/resources/templates/customer/customerform.html
@@ -12,8 +12,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             th:src="@{/webjars/jquery/3.3.1/jquery.min.js}"></script>
 
-    <link rel="stylesheet" href="../static/css/spring-core.css"
-          th:href="@{css/spring-core.css}" media="screen">
+    <link rel="stylesheet" href="../../static/css/spring-core.css"
+          th:href="@{../../static/css/spring-core.css}" media="screen">
 
 </head>
 <body>
