--- a/src/main/resources/templates/customer/customerform.html
+++ b/src/main/resources/templates/customer/customerform.html
@@ -29,6 +29,7 @@
                 <div class="card-body">
                     <form class="form" th:object="${customer}" th:action="@{/customer}" method="post">
                         <input type="hidden" th:field="*{id}"/>
+                        <input type="hidden" th:field="*{version}"/>
                         <div class="form-inline">
                             <label class="col-sm-3 col-form-label-lg">First Name:</label>
                             <input type="text" class="form-control" th:field="*{firstName}"/>
