--- a/src/main/resources/templates/customer/customerform.html
+++ b/src/main/resources/templates/customer/customerform.html
@@ -48,23 +48,23 @@
                         </div>
                         <div class="form-inline">
                             <label class="col-sm-3 col-form-label-lg">Address One:</label>
-                            <input type="text" class="form-control" th:field="*{addressOne}"/>
+                            <input type="text" class="form-control" th:field="*{billingAddress.addressOne}"/>
                         </div>
                         <div class="form-inline">
                             <label class="col-sm-3 col-form-label-lg">Address Two:</label>
-                            <input type="text" class="form-control" th:field="*{addressTwo}"/>
+                            <input type="text" class="form-control" th:field="*{billingAddress.addressTwo}"/>
                         </div>
                         <div class="form-inline">
                             <label class="col-sm-3 col-form-label-lg">City:</label>
-                            <input type="text" class="form-control" th:field="*{city}"/>
+                            <input type="text" class="form-control" th:field="*{billingAddress.city}"/>
                         </div>
                         <div class="form-inline">
                             <label class="col-sm-3 col-form-label-lg">State:</label>
-                            <input type="text" class="form-control" th:field="*{state}"/>
+                            <input type="text" class="form-control" th:field="*{billingAddress.state}"/>
                         </div>
                         <div class="form-inline">
                             <label class="col-sm-3 col-form-label-lg">Zip Code:</label>
-                            <input type="text" class="form-control" th:field="*{zipCode}"/>
+                            <input type="text" class="form-control" th:field="*{billingAddress.zipCode}"/>
                         </div>
                         <div class="row">
                             <button type="submit" class="btn btn-dark">Submit</button>
