--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,6 +18,13 @@
 <div class="container">
     <h1>Index Page</h1>
     <h2>Overview</h2>
+
+    <ul>
+        <li><a href="product/products">Products</a></li>
+        <li><a href="customer/customers">Customers</a></li>
+        <li><a href="user/users">Users</a></li>
+    </ul>
+
 </div>
 
 </body>
